Fix various layout issues in chrome and ie

--- a/views/project/project-details/project-details.less
+++ b/views/project/project-details/project-details.less
@@ -1,4 +1,5 @@
 div.project:extend(div.content all) {
+	overflow: visible;
 
 	div.project-details-container {
 		display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
