--- a/views/project/project-details/screenshots/screenshot-list/screenshot-list.less
+++ b/views/project/project-details/screenshots/screenshot-list/screenshot-list.less
@@ -1,6 +1,9 @@
 div.screenshots-container {
 	max-width: 525px;
-    margin-right: 25px;
+	width: 525px;
+  margin-right: 25px;
+	overflow: visible;
+	float: right;
 
 	@import "../screenshot-details/screenshot-details";
 
